Fixed heart alignments in all cards regarding the device type

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -370,18 +370,12 @@ $card-bg: #e7e5e5;
 @mixin heartHover {
   .heart-wrapper {
     width: 28px;
-    height: auto;
+    height: 28px;
 
     position: relative;
 
     &.menu {
       transform: translateX(-18px);
-    }
-
-    &.home {
-      position: absolute;
-      top: 160px;
-      right: 30px;
     }
   }
 
